<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/orangeLighter"
    android:layout_width="match_parent"
    android:layout_height="42dp">

    <FrameLayout
        android:id="@+id/leftIconsFrameLayout"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/backIconView"
            android:visibility="gone"
            android:layout_marginStart="5dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="42dp"
            android:layout_height="42dp"
            app:materialIcon="arrow_left"
            app:materialIconColor="#fff"
            app:materialIconSize="28dp"
            android:scaleType="center"/>
        <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/sideMenuIconView"
            android:layout_marginStart="5dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="42dp"
            android:layout_height="42dp"
            app:materialIcon="menu"
            app:materialIconColor="#fff"
            app:materialIconSize="28dp"
            android:scaleType="center"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/titleLinearLayout"
        android:layout_toEndOf="@id/leftIconsFrameLayout"
        android:layout_toStartOf="@id/searchIconView"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/flexappeal"
            style="@style/CustomTextViewStyle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/android_recruitment_test"
            style="@style/CustomTextViewStyle"
            android:textColor="@color/white"
            android:layout_marginTop="-5dp"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/searchRelativeLayout"
        android:visibility="gone"
        android:layout_toEndOf="@id/leftIconsFrameLayout"
        android:layout_toStartOf="@id/searchIconView"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/searchEditText"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:maxLines="1"
            android:hint="@string/header_search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColorHint="@color/orangeWhite"
            style="@style/CustomTextViewStyle"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/searchIconView"
            android:layout_marginEnd="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="42dp"
            android:layout_height="42dp"
            app:materialIcon="magnify"
            app:materialIconColor="#fff"
            app:materialIconSize="28dp"
            android:scaleType="center"/>

</RelativeLayout>