<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
...
                app:materialIconSize="180dp"
                android:scaleType="center"/>

            <ListView
                android:visibility="gone"
                android:background="@color/grayLighter"
                android:id="@+id/listView"
                tools:listitem="@layout/item_repository"
                android:paddingTop="10dp"
                android:paddingBottom="30dp"
                android:divider="@color/grayLighter"
                android:dividerHeight="10dp"
                android:clipToPadding="false"
...
